# Suricata-Test-Suite

./: .gitignore  LICENSE  README.md  conftest.py  default_suricata.yaml  param_template.py  pyproject.toml  pytest_start.sh  requirements.txt
.github/workflows/: lint.yml
assets/trex/traffic_profiles/: ad_hoc_stl_trex_profile.py  http_https_smb_trex_profile.py  https_trex_profile.py  nfs_smb_trex_profile.py  profile_ttp_http_only.py  trex_client_manager.py  util_trex_profile.py  web_50_sites_trex_profile.py
assets/trex/traffic_profiles/http_https_smb_trex_profile/: native.py  profile.py
assets/trex/traffic_profiles/http_trex_profile/: native.py  profile.py
assets/trex/traffic_profiles/https_trex_profile/: native.py  profile.py
assets/trex/traffic_profiles/nfs_smb_trex_profile/: native.py  profile.py
assets/trex/traffic_profiles/pcaps/: DNS_3P_83B.pcap  README.md  cisco.pcap  dark_reader.pcap  genericEBay_730P_1069B_3.pcap  google_maps.pcap  (+24 more)
tests/http_https_smb_simple/: test_http_https_smb_simple.py  test_settings.json
tests/http_simple/: test_http_simple.py  test_settings.json
tests/https_simple/: test_https_simple.py  test_settings.json
tests/nfs_smb_simple/: test_nfs_smb_simple.py  test_settings.json
tests/pcap_replay/: test_pcap_replay.py  test_settings.json
tests/trex_one_port/: test_settings.json  test_trex_one_port.py
tests/web_50_sites/: test_settings.json  test_web_50_sites.py
util/: add_vlan.py  config_builder.py  make-bars.py  make-graphs.py  multiplier_iterator.py  suri_util.py  suricata_manager.py  test_runner.py  trex_util.py
